# pycheck

./: .gitignore  CONTRIBUTING.md  README.md  hostile_test.py  hostile_test_ultra.py  hostile_test_v3.py  hostile_test_v4.py  pycheck_tool.py  pyproject.toml  report.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.py
src/: __init__.py  __main__.py  checker.py  cli.py  config.py  plugins.py  pycheck_tool.py  registry.py  utils.py
src/pycheck/: __init__.py  checker.py  cli.py  utils.py
tests/: test_pycheck.py
